<resources>
    <string name="app_name">Chef</string>
    <string name="enjoy_restaurant_quality_meals_nat_home">Enjoy Restaurant Quality Meals\nat Home</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="chef">Chef</string>
    <string name="deliever_favorite_food">Deliever Favorite Food</string>
    <string name="sign_up_here">Sign Up Here</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="current_location">Current Location</string>
    <string name="hint">We need your permission to access your location,to provide you with the best dining experience. By enabling location services, we can offer personalized restaurant recommendations, accurate delivery estimates, and ensure a seamless food delivery experience.</string>
    <string name="delivering_to">Delivering to</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore_your_favorite_food">Explore Your Favorite Food</string>
    <string name="plus">plus</string>
    <string name="mini">mini</string>
    <string name="delete">delete</string>
    <string name="_1">1</string>
    <string name="proceed">Proceed</string>
    <string name="Address">Lorem ipsum is placeholder text
commonly used in the graphic,
print, and publishing industries
for previewing layouts and visual</string>
    <string name="save_information">Save Information</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="imageedit">ImageEdit</string>
    <string name="payment_method">Payment Method</string>
    <string name="place_my_order">Place My Order</string>
    <string name="total_price">Total price</string>
    <string name="_400_egp">400 EGP</string>
    <string name="numberPhone">0111 380 9966</string>
    <string name="phone">Phone</string>
    <string name="go_to_home">Go To Home</string>
    <string name="dis">Description:</string>
    <string name="det">Substance consisting essentially of:\nProtein\nCarbohydrate\nFat.</string>
    <string name="add_to_cart">Add To Cart</string>
</resources>