<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".PayOutActivity">

    <ImageButton
        android:id="@+id/imageButtonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/arrow_left"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imageedit" />

    <TextView
        android:id="@+id/editTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="Edit"
        android:textColor="@color/red"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonBack" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/editTextView"
        android:layout_marginTop="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/profileshap"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="Name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/profileshap"
                android:ems="10"
                android:inputType="text"
                android:padding="10dp"
                android:text="Ahmed Mohamed"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/edit"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/imageedit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/profileshap"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="Address"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/profileshap"
                android:ems="10"
                android:inputType="text|textMultiLine"
                android:padding="10dp"
                android:text="Naser city , cairo , egypt"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/edit"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/imageedit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/profileshap"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="57dp"
                android:layout_weight="1"
                android:background="@drawable/profileshap"
                android:ems="10"
                android:inputType="phone"
                android:padding="10dp"
                android:text="@string/numberPhone"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/edit"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/imageedit" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/profileshap"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:hint="@string/payment_method"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <ImageView
                android:layout_width="180dp"
                android:layout_height="100dp"
                android:src="@drawable/cod"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/profileshap"
            android:elevation="2dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/total_price"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="57dp"
                android:layout_weight="1"
                android:background="@drawable/profileshap"
                android:ems="10"
                android:inputType="none"
                android:padding="10dp"
                android:textAlignment="center"
                android:text="@string/_400_egp"
                android:textColor="@color/red"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/processbutton"
        android:elevation="5dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textAllCaps="false"
        android:textColor="@color/red"
        android:textSize="20sp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/place_my_order" />




</androidx.constraintlayout.widget.ConstraintLayout>